=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2010-11-23  09:45:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-5
Modify bonds routine to print real locations of neighbors

In routine bonds (called at the beginning and at the end of the
program) we now print the real location of the neighbor atom in space,
and not, as in earlier versions, the location of the equivalent
representative in the unit cell.

modified:
  Src/bonds.f
  Docs/siesta.tex

------------------------------------------------------------------------
2010-11-12  14:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-4
Cosmetic fixes in Gen-basis/{ioncat,ionplot.sh}

modified:
  Util/Gen-basis/ioncat.f
  Util/Gen-basis/ionplot.sh

------------------------------------------------------------------------
2010-11-12  14:50:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-3
Fix test in m_getopts

A double if test gives problems with some compilers when
bounds checking is in effect.

modified:
  Src/m_getopts.f90

------------------------------------------------------------------------
2010-11-12  14:40:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-2
Improved grid for re-parametrization of pseudopotentials

When the option Reparametrize.Pseudos is in effect, the program
resamples the pseudopotential data into a new logarithmic grid with
parameters chosen so that the grid-point separation at the typical rcs
for orbitals is small enough (of the order of 0.01 bohr). The previous
choice of parameters resulted in grid-point separations of the order
of 0.005 bohr near the origin, which apparently is not fine enough for
s orbitals, leading to oscillations in the gradient near the origin.
