@@ -1,1 +1,1 @@
-siesta-3.0-rc2-5
+siesta-3.0-rc2-6
